# image-classification-torch

./: .gitignore  hello.py  pyproject.toml
src/: data.py  model.py  train.py
